fixed couple of minor bugs, and some css to align the alias and the data.

--- a/portfolio/src/main/resources/static/styles/pages/groups.css
+++ b/portfolio/src/main/resources/static/styles/pages/groups.css
@@ -108,6 +108,7 @@
 }
 .groups-page-repository{
     overflow-y: auto;
+    overflow-x: clip;
     max-height: 40vh;
 }
 
